# nlp_skill_agents

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: __init__.py
checkpoints/: 2026-05-13-mvp-foundation.md  2026-05-13-v1-dynamic-skill-packs.md  2026-05-13-v2-skill-pack-studio.md  2026-05-13-v3-agent-job-lifecycle.md  2026-05-13-v3-agent-job-runbooks.md  2026-05-13-v3-build-job-artifacts.md  2026-05-13-v3-care-plan-commitments.md  2026-05-13-v3-implementation-packets.md  2026-05-13-v3-metric-plugin-builder-skill.md  2026-05-13-v3-metric-plugin-foundation.md  2026-05-13-v3-plugin-request-artifacts.md  2026-05-13-v3-question-types.md  2026-05-14-demo-path-and-assets.md  2026-05-14-v4-study-workspace-backend.md  2026-05-14-v4-study-workspace-ui.md  2026-05-14-v5-agent-job-evidence.md  2026-05-14-v6-approved-library.md  2026-05-14-v6-audit-log.md  2026-05-14-v6-deployment-profiles.md  2026-05-14-v6-reproducibility-bundles.md  2026-05-17-batch-file-import-inference.md  2026-05-17-batch-run-drilldown.md  2026-05-17-casebook-design-controls.md  2026-05-17-docx-study-batch-upload.md  2026-05-17-nvivo-gap-slices.md  2026-05-17-nvivo-style-casebook.md  2026-05-17-persistent-study-schema.md  2026-05-17-study-batch-history.md  2026-05-17-study-file-assignment-grid.md  2026-05-24-cunit-devex-review.html  2026-05-24-cunit-segmentation-demo.html  2026-07-10-phase0-active-privacy-mode.md  2026-07-10-phase0-agent-job-gates.md  2026-07-10-phase0-calibrated-confidence.md  2026-07-10-phase0-recoverable-artifact-writes.md  2026-07-10-phase0-repository-truth.md  (+10 more)
(+116 files in other folders)
